--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
 
   google_fonts: ^6.2.1
+  get_storage: ^2.1.1
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
